--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ authors = ["Perdana Main <firman.fp123@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 numpy = "^2.1.3"
 matplotlib = "^3.9.3"
 pandas = "^2.2.3"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
 
 
 [build-system]
