--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^2.2.3"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 psycopg2-binary = "^2.9.10"
+urllib3 = "^2.2.3"
 
 
 [build-system]
