--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 psycopg2-binary = "^2.9.10"
 urllib3 = "^2.2.3"
+schedule = "^1.2.2"
 
 
 [build-system]
