--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requests = "^2.32.3"
 psycopg2-binary = "^2.9.10"
 urllib3 = "^2.2.3"
 schedule = "^1.2.2"
+statsmodels = "^0.14.4"
+joblib = "^1.4.2"
 
 
 [build-system]
