--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Perdana Main <firman.fp123@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -19,6 +20,8 @@ statsmodels = "^0.14.4"
 joblib = "^1.4.2"
 flask-restful = "^0.3.10"
 Flask = "^3.1.0"
+zeep = "^4.3.1"
+openpyxl = "^3.1.5"
 
 
 [build-system]
